--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,20 +41,25 @@ img {
 
 .container {
   width: 100%;
-  max-width: 80vw;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 1400px) {
+  .container {
+    max-width: 80vw;
+  }
 }
 
 .section {
   display: grid;
   min-height: 100vh;
-  min-height: 100svb;
   background-image: url("../images/background.png");
   background-size: cover;
   background-color: #E2D9CA;
-  padding-top: 170px;
-  padding-bottom: 170px;
+  padding-top: 5em;
+  padding-bottom: 5em;
   overflow: hidden;
 }
 @media (min-width: 768px) {
@@ -63,10 +68,29 @@ img {
   }
 }
 .section__grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 2fr 1fr;
   height: 100%;
+  display: grid;
+}
+@media (max-width: 991.98px) {
+  .section__grid {
+    gap: 5rem;
+  }
+}
+@media (min-width: 992px) {
+  .section__grid {
+    align-items: center;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 20px;
+  }
+  .section__grid .order-0 {
+    order: 0;
+  }
+  .section__grid .order-1 {
+    order: 1;
+  }
+  .section__grid .order-2 {
+    order: 2;
+  }
 }
 
 .navigation {
@@ -88,19 +112,36 @@ img {
 .navigation__link::after {
   content: "";
   display: block;
-  width: 2px;
-  height: 0;
   border-radius: 2px;
   background-color: currentColor;
   transition: all 0.3s linear;
+}
+@media (max-width: 991.98px) {
+  .navigation__link::after {
+    height: 2px;
+    width: 0;
+  }
+}
+@media (min-width: 992px) {
+  .navigation__link::after {
+    width: 2px;
+    height: 0;
+  }
 }
 .navigation__link.active {
   color: #000000;
   font-weight: 700;
   gap: 16px;
 }
-.navigation__link.active::after {
-  height: 46px;
+@media (max-width: 991.98px) {
+  .navigation__link.active::after {
+    width: 46px;
+  }
+}
+@media (min-width: 992px) {
+  .navigation__link.active::after {
+    height: 46px;
+  }
 }
 
 .aside__text {
@@ -115,16 +156,33 @@ img {
   inset: 0;
   width: 100%;
   height: 100%;
-  border-radius: 42px;
   overflow: hidden;
+  border-radius: 15px;
+}
+@media (min-width: 992px) {
+  .card {
+    border-radius: 42px;
+  }
 }
 .card-container {
   position: relative;
   width: 100%;
-  max-width: 510px;
-  padding-top: 77%;
+  max-width: 300px;
+  padding-top: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+@media (min-width: 768px) {
+  .card-container {
+    max-width: 400px;
+    padding-top: 50%;
+  }
+}
+@media (min-width: 992px) {
+  .card-container {
+    max-width: 510px;
+    padding-top: 77%;
+  }
 }
 .card-container__shapes {
   position: absolute;
@@ -137,6 +195,21 @@ img {
 .card-container__shapes--right {
   right: -15%;
   bottom: -20%;
+}
+@media (max-width: 1799.98px) {
+  .card-container__shapes__image {
+    max-height: 500px;
+  }
+}
+@media (max-width: 1199.98px) {
+  .card-container__shapes__image {
+    max-height: 400px;
+  }
+}
+@media (max-width: 767.98px) {
+  .card-container__shapes__image {
+    max-height: 300px;
+  }
 }
 .card__bg {
   position: absolute;
