--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,30 +43,53 @@ img{
 
 .container{
     width: 100%;
-    max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+    @media (min-width: 1400px) {
+        max-width: 80vw;
+    }
 }
 
 .section{
     display: grid;
     min-height: 100vh;
-    min-height: 100svb;
     background-image: url('../images/background.png');
     background-size: cover;
     @media (min-width: 768px) {
         background-size: 80vw;
     }
     background-color: #E2D9CA;
-    padding-top: 170px;
-    padding-bottom: 170px;
+    padding-top: 5em;
+    padding-bottom: 5em;
     overflow: hidden;
 
     &__grid{
-        display: grid;
-        align-items: center;
-        grid-template-columns: 1fr 2fr 1fr;
         height: 100%;
+        display: grid;
+        @media (max-width: 991.98px) {
+            gap: 5rem;
+        }
+        
+        @media (min-width: 992px) {
+            align-items: center;
+            grid-template-columns: 1fr 2fr 1fr;
+            gap: 20px;
+
+            .order{
+                &-0{
+                    order: 0;
+                }
+                &-1{
+                    order: 1;
+                }
+                &-2{
+                    order: 2;
+                }
+            }
+        }
     }
 }
 
@@ -89,8 +112,14 @@ img{
         &::after{
             content: '';
             display: block;
-            width: 2px;
-            height: 0;
+            @media (max-width: 991.98px){
+                height: 2px;
+                width: 0;
+            }
+            @media (min-width: 992px){
+                width: 2px;
+                height: 0;
+            }
             border-radius: 2px;
             background-color: currentColor;
             transition: all 0.3s linear;
@@ -102,7 +131,12 @@ img{
             gap: 16px;
 
             &::after{
-                height: 46px;
+                @media (max-width: 991.98px){
+                    width: 46px;
+                }
+                @media (min-width: 992px){
+                    height: 46px;
+                }
             }
         }
     }
@@ -120,14 +154,25 @@ img{
     inset: 0;
     width: 100%;
     height: 100%;
-    border-radius: 42px;
     overflow: hidden;
+    border-radius: 15px;
+    @media (min-width: 992px) {
+        border-radius: 42px;
+    }
     
     &-container{
         position: relative;
         width: 100%;
-        max-width: 510px;
-        padding-top: 77%;
+        max-width: 300px;
+        padding-top: 60%;
+        @media (min-width: 768px) {
+            max-width: 400px;
+            padding-top: 50%;
+        }
+        @media (min-width: 992px) {
+            max-width: 510px;
+            padding-top: 77%;
+        }
         margin-left: auto;
         margin-right: auto;
 
@@ -142,6 +187,18 @@ img{
             &--right{
                 right: -15%;
                 bottom: -20%;
+            }
+
+            &__image{
+                @media (max-width: 1799.98px) {
+                    max-height: 500px;
+                }
+                @media (max-width: 1199.98px) {
+                    max-height: 400px;
+                }
+                @media (max-width: 767.98px) {
+                    max-height: 300px;
+                }
             }
         }
     }
